[project]
name = "sqlalchemy-test"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Haruki Ise", email = "hise@umn.co.jp" }
]
dependencies = [
    "sqlalchemy>=2.0.31",
    "psycopg>=3.2.1",
    "psycopg2>=2.9.9",
    "sqlalchemy-utils>=0.41.2",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sqlalchemy_test"]
